force-app/main/default/objects/Time_Block__c/validationRules/End_Date_Should_Be_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Should_Be_After_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Effective_Start_Date__c &gt;  Effective_End_Date__c</errorConditionFormula>
    <errorDisplayField>Effective_End_Date__c</errorDisplayField>
    <errorMessage>Effective End Date cannot be earlier than Effective Start Date</errorMessage>
</ValidationRule>