force-app/main/default/objects/Time_Block__c/validationRules/End_Time_Should_Be_After_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_Should_Be_After_Start_Time</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Time__c &gt;   End_Time__c</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>End Time cannot be earlier than Start Time</errorMessage>
</ValidationRule>