force-app/main/default/objects/Time_Block__c/validationRules/Time_Block_Names_Must_Be_Unique.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_Block_Names_Must_Be_Unique</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  CONTAINS(
      VLOOKUP( 
        $ObjectType.Time_Block__c.Fields.Name , 
        $ObjectType.Time_Block__c.Fields.Name, Name
      ), 
      Name
    ), 
  OR(
      ISNEW(), ISCHANGED(Name)
    ) 
  )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Time Block Name already in use</errorMessage>
</ValidationRule>